--- a/MASTER05-GraphTheory/RegularGraph.tex
+++ b/MASTER05-GraphTheory/RegularGraph.tex
@@ -1,28 +1,10 @@
 
-\documentclass{beamer}
-
-\usepackage{amsmath}
-
-\begin{document}
-%--------------------------------------------------%
-\begin{frame}
-\begin{center}
-{ \Huge
-Regular Graphs}
-\\
-\bigskip
-{ \Large
-youtube.com/StatsLabDublin \\ \vspace{0.2cm} Twitter: @statslabdublin
-}
-\end{center}
-\end{frame}
-
 %--------------------------------------------------%
 
-\begin{frame}
-\frametitle{Regular Graphs}
+
+{Regular Graphs}
 {
-\LARGE
+
 What is meant by an \textbf{n-regular} graph?\\
 \bigskip
 Each vertex in the graph has the same degree, a degree of n.
@@ -31,30 +13,21 @@ Each vertex in the graph has the same degree, a degree of n.
 In a 3-regular graph, each vertex has degree of three.
 
 }
-\end{frame}
+
 
 %--------------------------------------------------%
-\begin{frame}
-\frametitle{Regular Graphs}
-{\huge
-\vspace{-3cm}
+
+{Regular Graphs}
+{
+%% - \vspace{-3cm}
 A 3-regular graph with six vertices.
-}
-\end{frame}
-%--------------------------------------------------%
-\begin{frame}
-\frametitle{Regular Graphs}
-{\huge 
-\vspace{-3cm}
+egular Graphs}
+{ 
+%% - \vspace{-3cm}
+A 3-regular graph with seven vertices.
+
+%% - \vspace{-3cm}
 A 3-regular graph with seven vertices.
 }
-\end{frame}
-%--------------------------------------------------%
-\begin{frame}
-\frametitle{Regular Graphs}
-{\huge 
-\vspace{-3cm}
-A 3-regular graph with seven vertices.
-}
-\end{frame}
+
 \end{document}
