--- a/MASTER05-GraphTheory/Isomorph2.tex
+++ b/MASTER05-GraphTheory/Isomorph2.tex
@@ -1,19 +1,5 @@
+\section{Isomorphism}
 
-\documentclass{beamer}
-\usetheme{Warsaw}
-\setbeamertemplate{headline}{}
-\setbeamertemplate{footline}{}
-\setbeamersize{text margin left=0.5cm}
-\usepackage[english]{babel}
-\usepackage[utf8]{inputenc}
-\usepackage{times}
-\usepackage[T1]{fontenc}
-\usepackage{framed}
-
-\begin{document}
-\begin{frame}
-\frametitle{Isomorphism}
-\Large
 \begin{center}
 \begin{tabular}{|c|c|}
 \hline Graph 1 & Graph 2 \\ \hline 
@@ -25,5 +11,3 @@
 \hline 
 \end{tabular} 
 \end{center}
-\end{frame}
-\end{document}
